index.html, style.css, swithingsoftware.html atnaujinimas

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
     <div>
         <h2>Naudos</h2>
         <p><a href="naudinga.html" title="Naudos">Naudos</a>
-            <br>
+        </p>
+        <P>
             Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
             bei mano <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" title="GRASS referal kodas"
                 target="_blank" rel="noopener noreferrer">
-                www.grass.io</a> referal kodas.
-        </p>
+                www.grass.io</a> referal kodas.</P>
     </div>
     <div>
         <h3>deMicrosofted & deGoogled</h3>
-        <p><a href="switchingsoftware.html" title="Switching Software">Switching Software. Mano deMicrosoftintos
-                kompiuterinės ir deGooglintos telefoninės programos</a>.
-            <br>
-            Šiame puslapyje yra mano naudojamos programinės įrangos sąrašas, kurią pakeičiau alternatyvomis, kiek
-            įmanoma.
+        <p><a href="switchingsoftware.html" title="Switching Software">Switching Software&Hardware</a>.
         </p>
+        <p>
+            Šiame puslapyje yra mano naudojamos deMicrosoftintos kompiuterinės ir deGooglintos telefoninės programinės
+            įrangos, kurią pakeičiau alternatyvomis, kiek tai įmanoma, sąrašas. Taip pat pavardinta techninė įranga,
+            kuri galėtų pakeisti esamą Big Tech.</p>
     </div>
     <hr>
     <div>
