--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -37,8 +37,8 @@
                     target="_blank">CoMaps</a>; <a href="https://organicmaps.app" target="_blank">Organic Maps</a></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Google Search</td>
+            <td><a href="https://www.ecosia.org/" target="_blank">www.ecosia.org</a></td>
         </tr>
     </table>
     </p>
@@ -51,7 +51,7 @@
         </tr>
         <tr>
             <td>Microsoft Widows 10</td>
-            <td><a href="https://zorin.com" target="_blank">Zorin OS</a></td>
+            <td><a href="https://zorin.com" target="_blank">Linux Zorin OS</a></td>
         </tr>
         <tr>
             <td>Google Chrome</td>
@@ -70,6 +70,30 @@
             <td></td>
         </tr>
 
+    </table>
+    <p>More can be found at <a href="https://european-alternatives.eu/"
+            target="_blank">https://european-alternatives.eu</a>.</p>
+    </p>
+    <h1>Switching Hardware</h1>
+    <p> This is the list of deGoogled hardware</p>
+    <p>
+    <table class="styled-table">
+        <tr>
+            <th>Hardware</th>
+            <th>Notes</th>
+        </tr>
+        <tr>
+            <td><a href="https://novacustom.com/" target="_blank">novacustom.com</a></td>
+            <td>Computers and deGoogled privacy-focused mobile phone SHIFTphone with iodéOS. Made in the EU</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
     </table>
     </p>
     <hr>
