Pataisyta pagal tikrinimo įrankius; pridėtas (pervardintas) robots.txt

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         1970. Va tada ir prasidėjo.
     </title>
     <meta name="description" content="Pradinis puslapis">
+    <meta name="keywords"
+        content="gyvenimas, taikinys, kelionės, naudos, programinė įranga, privatumas, deGoogled, deMicrosofted, atviro kodo">
+    <link rel="canonical" href="https://jurkis.neocities.org/index.html">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Jurkis">
+    <meta name="publisher" content="Jurkis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
