--- a/naudinga.html
+++ b/naudinga.html
@@ -12,8 +12,14 @@
         gtag('config', 'G-KSPPCGGZJE');
     </script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naudos | Pixel telefonų kodai | Pixel phone codes</title>
+    <meta name="description" content="Naudingos komandos ir kodai Pixel telefonams.">
+    <meta name="keywords" content="Pixel, telefonas, kodai, testing menu, rsync, naudingos komandos">
+    <link rel="canonical" href="https://jurkis.neocities.org/naudinga.html">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Jurkis">
+    <meta name="publisher" content="Jurkis">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 
