--- a/taikinys.html
+++ b/taikinys.html
@@ -14,7 +14,10 @@
     <meta charset="UTF-8">
     <meta name="description" content="A personal showcase of a shooting target with bullet marks.">
     <meta name="keywords" content="target shooting, bullet holes, shooting practice">
+    <meta name="robots" content="index, follow">
     <meta name="author" content="Jurkis">
+    <meta name="publisher" content="Jurkis">
+    <link rel="canonical" href="https://jurkis.neocities.org/taikinys.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taikinys suvarpytasis </title>
     <link rel="stylesheet" href="style.css">
