--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -13,6 +13,14 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="A list of software and hardware alternatives to deGoogle and deMicrosoft your devices for better privacy and open-source solutions.">
+    <meta name="keywords"
+        content="deGoogled, deMicrosofted, privacy, open source, alternatives, Linux, LibreOffice, Vivaldi, Zorin, F-Droid, OsmAnd">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Jurkis">
+    <meta name="publisher" content="Jurkis">
+    <link rel="canonical" href="https://jurkis.neocities.org/switchingsoftware.html">
     <title>Switching Software to be deGoogled or deMicrosofted</title>
     <link rel="stylesheet" href="style.css">
 </head>
