--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -28,8 +28,8 @@
 <body>
     <h1>Welcome to Switching Software</h1>
     <p>This is a list of software I replaced with alternatives as much as possible.</p>
+
     <h1>deGoogled</h1>
-    <p>
     <table class="styled-table">
         <tr>
             <th>Original Software</th>
@@ -49,16 +49,15 @@
             <td><a href="https://www.ecosia.org/" target="_blank">www.ecosia.org</a></td>
         </tr>
     </table>
-    </p>
+
     <h1>deMicrosofted</h1>
-    <p>
     <table class="styled-table">
         <tr>
             <th>Original Software</th>
             <th>Alternative</th>
         </tr>
         <tr>
-            <td>Microsoft Widows 10</td>
+            <td>Microsoft Windows 10</td>
             <td><a href="https://zorin.com" target="_blank">Linux Zorin OS</a></td>
         </tr>
         <tr>
@@ -69,22 +68,12 @@
             <td>Microsoft Office</td>
             <td><a href="https://www.libreoffice.org" target="_blank">LibreOffice</a></td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-
     </table>
     <p>More can be found at <a href="https://european-alternatives.eu/"
             target="_blank">https://european-alternatives.eu</a>.</p>
-    </p>
+
     <h1>Switching Hardware</h1>
-    <p> This is the list of deGoogled hardware</p>
-    <p>
+    <p>This is the list of deGoogled hardware</p>
     <table class="styled-table">
         <tr>
             <th>Hardware</th>
@@ -94,16 +83,8 @@
             <td><a href="https://novacustom.com/" target="_blank">novacustom.com</a></td>
             <td>Computers and deGoogled privacy-focused mobile phone SHIFTphone with iodéOS. Made in the EU</td>
         </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-        </tr>
     </table>
-    </p>
+
     <hr>
     <footer>
         <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
