feat: Update global and table fonts to monospace, increase body font size, and make a minor text correction.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div>
         <h3>deMicrosofted & deGoogled</h3>
-        <p><a href="switchingsoftware.html" title="Switching Software">Switching Software&Hardware</a>.
+        <p><a href="switchingsoftware.html" title="Switching Software">Switching Software&Hardware</a>
         </p>
         <p>
             Šiame puslapyje yra mano naudojamos deMicrosoftintos kompiuterinės ir deGooglintos telefoninės programinės
