feat: Add CSS validator badge and wrap footer content in a div across all pages, plus a minor text update on index.html.

--- a/naudinga.html
+++ b/naudinga.html
@@ -40,8 +40,18 @@
         yIPN3a6kv1FhxG_
     </a>
     <hr>
+    <div>
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+            </a>
+        </p>
+    </div>
     <footer>
-        <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
+        <div>
+            <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
+        </div>
     </footer>
     <script>
         // Set the current year dynamically
