--- a/index.html
+++ b/index.html
@@ -55,14 +55,6 @@
             įrangos, kurią pakeičiau alternatyvomis, kiek tai įmanoma, sąrašas. Taip pat pavardinta techninė įranga,
             kuri galėtų pakeisti esamą Big Tech.</p>
     </div>
-    <div>
-        <h3>Lorem Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</p>
-    </div>
     <hr>
     <div>
         <p>Aš Strava'oje: <a href="https://strava.com/athletes/129115054" title="Mano vaikščiojimų pasiekimai Stravoje"
@@ -74,13 +66,23 @@
     <div>
         <p><a href="https://www.eurobilltracker.com/?referer=243791" title="Eurobill Tracker" target="_blank"
                 rel="noopener noreferrer">
-                Visit Eurobill Tracker
+                Visit Eurobill Tracker (my referral code)
             </a>
         </p>
     </div>
     <hr>
+    <div>
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+            </a>
+        </p>
+    </div>
     <footer>
-        <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
+        <div>
+            <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
+        </div>
     </footer>
     <script>
         // Set the current year dynamically
