--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -86,8 +86,18 @@
     </table>
 
     <hr>
+    <div>
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Valid CSS!" />
+            </a>
+        </p>
+    </div>
     <footer>
-        <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
+        <div>
+            <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
+        </div>
     </footer>
     <script>
         // Set the current year dynamically
