feat: add OnePlus 13 phone codes to naudinga.html

--- a/naudinga.html
+++ b/naudinga.html
@@ -35,6 +35,37 @@
         <li>Pasiekti testavimo meniu</li>
         <li>Keisti tinklo nustatymus</li>
     </ul>
+    <h1>OnePlus 13 telefonų kodai | OnePlus 13 phone codes</h1>
+    <ul>
+        <li><code>*#1234#</code> - Maximus SAR level.
+        </li>
+        <li><code>*#*#225#*#*</code> - Calendar(s).
+        </li>
+        <li><code>*#*#39324#*#*</code> - Open region unlock menu.
+        </li>
+        <li><code>*#*#3932433284#*#*</code> - Open region test menu.
+        </li>
+        <li><code>*#*#426#*#*</code> - FMC Diagnostics.
+        </li>
+        <li><code>*#06#</code> - IMEI&EID.
+        </li>
+        <li><code>*#07#</code>- Maximus SAR level.
+        </li>
+        <li><code>*#66#</code> - IMEI.
+        </li>
+        <li><code>*#6776#</code> - Software info.
+        </li>
+        <li><code>*#800#</code> - Feedback.
+        </li>
+        <li><code>*#888#</code> - Commercial EngineerMode - PCB number.
+        </li>
+        <li><code>*#899#</code> - AfterSale Page.
+        </li>
+        <li><code>*#*#828282#*#*</code> - Telecom Developer.
+        </li>
+        <li><code>*#9434#*</code> - Commercial EngineerMode.
+        </li>
+    </ul>
     <h1>GRASS referal code</h1>
     <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" target="_blank" rel="noopener">
         yIPN3a6kv1FhxG_
