--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p><a href="naudinga.html" title="Naudos">Naudos</a>
         </p>
         <P>
-            Šiame puslapyje patalpinti įvairūs naudingi Pixel telefonų kodai
+            Šiame puslapyje patalpinti įvairūs naudingi Pixel ir OnePlus 13 telefonų kodai
             bei mano <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" title="GRASS referal kodas"
                 target="_blank" rel="noopener noreferrer">
                 www.grass.io</a> referal kodas.</P>
