docs: Update OnePlus 13 phone code description and add a verification note.

--- a/naudinga.html
+++ b/naudinga.html
@@ -36,8 +36,11 @@
         <li>Keisti tinklo nustatymus</li>
     </ul>
     <h1>OnePlus 13 telefonų kodai | OnePlus 13 phone codes</h1>
+    <div>
+        <p>Patikrinta su mano telefonu OnePlus 13</p>
+    </div>
     <ul>
-        <li><code>*#1234#</code> - Maximus SAR level.
+        <li><code>*#1234#</code> - Firmaware version.
         </li>
         <li><code>*#*#225#*#*</code> - Calendar(s).
         </li>
