fix: correct typos in OnePlus 13 phone codes

--- a/naudinga.html
+++ b/naudinga.html
@@ -48,11 +48,11 @@
         </li>
         <li><code>*#*#3932433284#*#*</code> - Open region test menu.
         </li>
-        <li><code>*#*#426#*#*</code> - FMC Diagnostics.
+        <li><code>*#*#426#*#*</code> - FCM Diagnostics.
         </li>
         <li><code>*#06#</code> - IMEI&EID.
         </li>
-        <li><code>*#07#</code>- Maximus SAR level.
+        <li><code>*#07#</code>- Maximum SAR level.
         </li>
         <li><code>*#66#</code> - IMEI.
         </li>
