feat: add additional resource link to European Alternatives in switchingsoftware.html

--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -70,7 +70,8 @@
         </tr>
     </table>
     <p>More can be found at <a href="https://european-alternatives.eu/"
-            target="_blank">https://european-alternatives.eu</a>.</p>
+            target="_blank">https://european-alternatives.eu</a> or <a href="https://dappcdn.com"
+            target="_blank">https://dappcdn.com</a>.</p>
 
     <h1>Switching Hardware</h1>
     <p>This is the list of deGoogled hardware</p>
