chore: Update copyright year range in footers across all HTML files.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     <footer>
         <div>
-            <p>&copy; <span id="year"></span> <a href="index.html">Jurkis</a></p>
+            <p>&copy; 2025-<span id="year"></span> <a href="index.html">Jurkis</a></p>
         </div>
     </footer>
     <script>
