--- a/w3-grid.html
+++ b/w3-grid.html
@@ -25,7 +25,7 @@
     </div>
 
     <footer>
-        <p>&copy; <span id="year"></span> Jurkis</p>
+        <p>&copy; 2025-<span id="year"></span> Jurkis</p>
     </footer>
 
     <script>
