feat: Add table of contents and structure content into semantic sections.

--- a/naudinga.html
+++ b/naudinga.html
@@ -24,55 +24,70 @@
 </head>
 
 <body>
-    <h1>Pixel telefonų kodai | Pixel phone codes</h1>
-    <ul>
-        <li><code>*#*#4636#*#*</code>.
-            <br> Atidaro telefono 'TESTING' meniu. Paimta iš <a
-                href="https://droidwin.com/how-to-enable-5g-on-pixel-6a-6-pro/">šio
-                puslapio, skyrius
-                "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a>
-        </li>
-        <li>Pasiekti testavimo meniu</li>
-        <li>Keisti tinklo nustatymus</li>
-    </ul>
-    <h1>OnePlus 13 telefonų kodai | OnePlus 13 phone codes</h1>
-    <div>
-        <p>Patikrinta su mano telefonu OnePlus 13</p>
-    </div>
-    <ul>
-        <li><code>*#1234#</code> - Firmaware version.
-        </li>
-        <li><code>*#*#225#*#*</code> - Calendar(s).
-        </li>
-        <li><code>*#*#39324#*#*</code> - Open region unlock menu.
-        </li>
-        <li><code>*#*#3932433284#*#*</code> - Open region test menu.
-        </li>
-        <li><code>*#*#426#*#*</code> - FCM Diagnostics.
-        </li>
-        <li><code>*#06#</code> - IMEI&EID.
-        </li>
-        <li><code>*#07#</code>- Maximum SAR level.
-        </li>
-        <li><code>*#66#</code> - IMEI.
-        </li>
-        <li><code>*#6776#</code> - Software info.
-        </li>
-        <li><code>*#800#</code> - Feedback.
-        </li>
-        <li><code>*#888#</code> - Commercial EngineerMode - PCB number.
-        </li>
-        <li><code>*#899#</code> - AfterSale Page.
-        </li>
-        <li><code>*#*#828282#*#*</code> - Telecom Developer.
-        </li>
-        <li><code>*#9434#*</code> - Commercial EngineerMode.
-        </li>
-    </ul>
-    <h1>GRASS referal code</h1>
-    <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" target="_blank" rel="noopener">
-        yIPN3a6kv1FhxG_
-    </a>
+    <h1>Turinys</h1>
+    <nav>
+        <ul>
+            <li><a href="#pixel-codes">Pixel kodai</a></li>
+            <li><a href="#oneplus-codes">OnePlus kodai</a></li>
+            <li><a href="#grass-code">GRASS kodas</a></li>
+        </ul>
+    </nav>
+
+    <section id="pixel-codes">
+        <h1>Pixel telefonų kodai | Pixel phone codes</h1>
+        <ul>
+            <li><code>*#*#4636#*#*</code>.
+                <br> Atidaro telefono 'TESTING' meniu. Paimta iš <a
+                    href="https://droidwin.com/how-to-enable-5g-on-pixel-6a-6-pro/">šio
+                    puslapio, skyrius
+                    "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a>
+            </li>
+            <li>Pasiekti testavimo meniu</li>
+            <li>Keisti tinklo nustatymus</li>
+        </ul>
+    </section>
+    <section id="oneplus-codes">
+        <h1>OnePlus 13 telefonų kodai | OnePlus 13 phone codes</h1>
+        <div>
+            <p>Patikrinta su mano telefonu OnePlus 13</p>
+        </div>
+        <ul>
+            <li><code>*#1234#</code> - Firmaware version.
+            </li>
+            <li><code>*#*#225#*#*</code> - Calendar(s).
+            </li>
+            <li><code>*#*#39324#*#*</code> - Open region unlock menu.
+            </li>
+            <li><code>*#*#3932433284#*#*</code> - Open region test menu.
+            </li>
+            <li><code>*#*#426#*#*</code> - FCM Diagnostics.
+            </li>
+            <li><code>*#06#</code> - IMEI&EID.
+            </li>
+            <li><code>*#07#</code>- Maximum SAR level.
+            </li>
+            <li><code>*#66#</code> - IMEI.
+            </li>
+            <li><code>*#6776#</code> - Software info.
+            </li>
+            <li><code>*#800#</code> - Feedback.
+            </li>
+            <li><code>*#888#</code> - Commercial EngineerMode - PCB number.
+            </li>
+            <li><code>*#899#</code> - AfterSale Page.
+            </li>
+            <li><code>*#*#828282#*#*</code> - Telecom Developer.
+            </li>
+            <li><code>*#9434#*</code> - Commercial EngineerMode.
+            </li>
+        </ul>
+    </section>
+    <section id="grass-code">
+        <h1>GRASS referal code</h1>
+        <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" target="_blank" rel="noopener">
+            yIPN3a6kv1FhxG_
+        </a>
+    </section>
     <hr>
     <div>
         <p>
