feat: Add navigation menu and structure content into sections with IDs.

--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -28,82 +28,92 @@
 <body>
     <h1>Welcome to Switching Software</h1>
     <p>This is a list of software I replaced with alternatives as much as possible.</p>
+    <nav>
+        <ul>
+            <li><a href="#degoogled">deGoogled</a></li>
+            <li><a href="#demicrosofted">deMicrosofted</a></li>
+            <li><a href="#switching-hardware">Switching Hardware</a></li>
+        </ul>
+    </nav>
+    <section id="degoogled">
+        <h1>deGoogled</h1>
+        <table class="styled-table">
+            <tr>
+                <th>Original Software</th>
+                <th>Alternative</th>
+            </tr>
+            <tr>
+                <td>Google Play</td>
+                <td><a href="https://f-droid.org" target="_blank">F-Droid</a> (partyally)</td>
+            </tr>
+            <tr>
+                <td>Google Maps</td>
+                <td><a href="https://osmand.net" target="_blank">OsmAnd</a>; <a href="https://www.comaps.app"
+                        target="_blank">CoMaps</a>; <a href="https://organicmaps.app" target="_blank">Organic Maps</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Google Search</td>
+                <td><a href="https://www.ecosia.org/" target="_blank">www.ecosia.org</a></td>
+            </tr>
+        </table>
+    </section>
+    <section id="demicrosofted">
+        <h1>deMicrosofted</h1>
+        <table class="styled-table">
+            <tr>
+                <th>Original Software</th>
+                <th>Alternative</th>
+            </tr>
+            <tr>
+                <td>Microsoft Windows 10</td>
+                <td><a href="https://zorin.com" target="_blank">Linux Zorin OS</a></td>
+            </tr>
+            <tr>
+                <td>Google Chrome</td>
+                <td><a href="https://vivaldi.com" target="_blank">Vivaldi</a></td>
+            </tr>
+            <tr>
+                <td>Microsoft Office</td>
+                <td><a href="https://www.libreoffice.org" target="_blank">LibreOffice</a></td>
+            </tr>
+        </table>
+        <p>More can be found at <a href="https://european-alternatives.eu/"
+                target="_blank">https://european-alternatives.eu</a> or at <a href="https://dappcdn.com"
+                target="_blank">https://dappcdn.com</a>.</p>
+    </section>
+    <section id="switching-hardware">
+        <h1>Switching Hardware</h1>
+        <p>This is the list of deGoogled hardware</p>
+        <table class="styled-table">
+            <tr>
+                <th>Hardware</th>
+                <th>Notes</th>
+            </tr>
+            <tr>
+                <td><a href="https://novacustom.com/" target="_blank">novacustom.com</a></td>
+                <td>Computers and deGoogled privacy-focused mobile phone SHIFTphone with iodéOS. Made in the EU</td>
+            </tr>
+        </table>
 
-    <h1>deGoogled</h1>
-    <table class="styled-table">
-        <tr>
-            <th>Original Software</th>
-            <th>Alternative</th>
-        </tr>
-        <tr>
-            <td>Google Play</td>
-            <td><a href="https://f-droid.org" target="_blank">F-Droid</a> (partyally)</td>
-        </tr>
-        <tr>
-            <td>Google Maps</td>
-            <td><a href="https://osmand.net" target="_blank">OsmAnd</a>; <a href="https://www.comaps.app"
-                    target="_blank">CoMaps</a>; <a href="https://organicmaps.app" target="_blank">Organic Maps</a></td>
-        </tr>
-        <tr>
-            <td>Google Search</td>
-            <td><a href="https://www.ecosia.org/" target="_blank">www.ecosia.org</a></td>
-        </tr>
-    </table>
-
-    <h1>deMicrosofted</h1>
-    <table class="styled-table">
-        <tr>
-            <th>Original Software</th>
-            <th>Alternative</th>
-        </tr>
-        <tr>
-            <td>Microsoft Windows 10</td>
-            <td><a href="https://zorin.com" target="_blank">Linux Zorin OS</a></td>
-        </tr>
-        <tr>
-            <td>Google Chrome</td>
-            <td><a href="https://vivaldi.com" target="_blank">Vivaldi</a></td>
-        </tr>
-        <tr>
-            <td>Microsoft Office</td>
-            <td><a href="https://www.libreoffice.org" target="_blank">LibreOffice</a></td>
-        </tr>
-    </table>
-    <p>More can be found at <a href="https://european-alternatives.eu/"
-            target="_blank">https://european-alternatives.eu</a> or at <a href="https://dappcdn.com"
-            target="_blank">https://dappcdn.com</a>.</p>
-
-    <h1>Switching Hardware</h1>
-    <p>This is the list of deGoogled hardware</p>
-    <table class="styled-table">
-        <tr>
-            <th>Hardware</th>
-            <th>Notes</th>
-        </tr>
-        <tr>
-            <td><a href="https://novacustom.com/" target="_blank">novacustom.com</a></td>
-            <td>Computers and deGoogled privacy-focused mobile phone SHIFTphone with iodéOS. Made in the EU</td>
-        </tr>
-    </table>
-
-    <hr>
-    <div>
-        <p>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Valid CSS!" />
-            </a>
-        </p>
-    </div>
-    <footer>
+        <hr>
         <div>
-            <p>&copy; 2025-<span id="year"></span> <a href="index.html">Jurkis</a></p>
+            <p>
+                <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                        alt="Valid CSS!" />
+                </a>
+            </p>
         </div>
-    </footer>
-    <script>
-        // Set the current year dynamically
-        document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
+        <footer>
+            <div>
+                <p>&copy; 2025-<span id="year"></span> <a href="index.html">Jurkis</a></p>
+            </div>
+        </footer>
+        <script>
+            // Set the current year dynamically
+            document.getElementById('year').textContent = new Date().getFullYear();
+        </script>
 </body>
 
 </html>
