--- a/naudinga.html
+++ b/naudinga.html
@@ -36,14 +36,11 @@
     <section id="pixel-codes">
         <h1>Pixel telefonų kodai | Pixel phone codes</h1>
         <ul>
-            <li><code>*#*#4636#*#*</code>.
-                <br> Atidaro telefono 'TESTING' meniu. Paimta iš <a
+            <li><code>*#*#4636#*#*</code> Atidaro telefono 'TESTING' meniu. Paimta iš <a
                     href="https://droidwin.com/how-to-enable-5g-on-pixel-6a-6-pro/">šio
                     puslapio, skyrius
                     "Enable 5G on Pixel 6A/6/Pro Via Settings Menu"</a>
             </li>
-            <li>Pasiekti testavimo meniu</li>
-            <li>Keisti tinklo nustatymus</li>
         </ul>
     </section>
     <section id="oneplus-codes">
