style: expand table width to 100% and update page heading text.

--- a/naudinga.html
+++ b/naudinga.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <h1>Turinys</h1>
+    <h1>Puslapio turinys</h1>
     <nav>
         <ul>
             <li><a href="#pixel-codes">Pixel kodai</a></li>
