Add Linux commands section to naudinga.html
Added a section for useful Linux commands with a table.

--- a/naudinga.html
+++ b/naudinga.html
@@ -79,6 +79,28 @@
             </li>
         </ul>
     </section>
+    <section id="linux-commands">
+        <h1>Usefull linux commands</h1>
+        <table class="styled-table">
+            <tr>
+                <th>Command</th>
+                <th>Explanation</th>
+            </tr>
+            <tr>
+                <td>systemd-analyze</td>
+                <td>sShow startup time</td>
+            </tr>
+            <tr>
+                <td>systemd-analyze critical-chain</td>
+                <td> Show startup time of every proces during startup
+                </td>
+            </tr>
+            <tr>
+                <td>bla</td>
+                <td>bla bla</td>
+            </tr>
+        </table>
+    </section>
     <section id="grass-code">
         <h1>GRASS referal code</h1>
         <a href="https://app.grass.io/register/?referralCode=yIPN3a6kv1FhxG_" target="_blank" rel="noopener">
