Update vnstat information in naudinga.html
Replaced placeholder text with vnstat information and link.

--- a/naudinga.html
+++ b/naudinga.html
@@ -97,8 +97,8 @@
                 </td>
             </tr>
             <tr>
-                <td>bla</td>
-                <td>bla bla</td>
+                <td>vnstat</td>
+                <td>More at <a href="https://humdi.net/vnstat/" target="_blank">https://humdi.net/vnstat/</a></td>
             </tr>
         </table>
     </section>
