--- a/naudinga.html
+++ b/naudinga.html
@@ -29,7 +29,7 @@
         <ul>
             <li><a href="#pixel-codes">Pixel kodai</a></li>
             <li><a href="#oneplus-codes">OnePlus kodai</a></li>
-            <li><a href="#grass-code">GRASS kodas</a></li>
+            <li><a href="#grass-code">GRASS referal kodas</a></li>
         </ul>
     </nav>
 
