refactor: update software alternatives link text and add an empty table row.

--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -78,7 +78,7 @@
                 <td><a href="https://www.libreoffice.org" target="_blank">LibreOffice</a></td>
             </tr>
         </table>
-        <p>More can be found at <a href="https://european-alternatives.eu/"
+        <p>More software alternatives can be found at <a href="https://european-alternatives.eu/"
                 target="_blank">https://european-alternatives.eu</a> or at <a href="https://dappcdn.com"
                 target="_blank">https://dappcdn.com</a>.</p>
     </section>
@@ -93,6 +93,10 @@
             <tr>
                 <td><a href="https://novacustom.com/" target="_blank">novacustom.com</a></td>
                 <td>Computers and deGoogled privacy-focused mobile phone SHIFTphone with iodéOS. Made in the EU</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
             </tr>
         </table>
 
