feat: Add "Į pradžią" title attribute to footer links and correct Strava link title.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     </div>
     <hr>
     <div>
-        <p>Aš Strava'oje: <a href="https://strava.com/athletes/129115054" title="Mano vaikščiojimų pasiekimai Stravoje"
-                class="strava-badge- strava-badge-follow" target="_blank">
+        <p>Aš Strava'oje: <a href="https://strava.com/athletes/129115054"
+                title="Mano vaikščiojimų pasiekimai Strava'oje" class="strava-badge- strava-badge-follow"
+                target="_blank">
                 <img src="//badges.strava.com/echelon-sprite-16.png" alt="Strava">
             </a>
         </p>
@@ -81,7 +82,7 @@
     </div>
     <footer>
         <div>
-            <p>&copy; 2025-<span id="year"></span> <a href="index.html">Jurkis</a></p>
+            <p>&copy; 2025-<span id="year"></span> <a href="index.html" title="Į pradžią">Jurkis</a></p>
         </div>
     </footer>
     <script>
