--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -111,7 +111,7 @@
         </div>
         <footer>
             <div>
-                <p>&copy; 2025-<span id="year"></span> <a href="index.html">Jurkis</a></p>
+                <p>&copy; 2025-<span id="year"></span> <a href="index.html" title="Į pradžią">Jurkis</a></p>
             </div>
         </footer>
         <script>
