feat: Add Teltonika routers to the recommended products table.

--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -110,8 +110,9 @@
                 <td>Computers and deGoogled privacy-focused mobile phone SHIFTphone with iodéOS. Made in the EU</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td><a href="https://www.teltonika-networks.com/products/routers" target="_blank">Teltonika routers</a>
+                </td>
+                <td>Made in the EU (Lithuania) Teltonika routers</td>
             </tr>
         </table>
 
