fix: improve wording for Teltonika router description

--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -112,7 +112,7 @@
             <tr>
                 <td><a href="https://www.teltonika-networks.com/products/routers" target="_blank">Teltonika routers</a>
                 </td>
-                <td>Made in the EU (Lithuania) Teltonika routers</td>
+                <td>Made in the EU (Lithuania) routers by Teltonika</td>
             </tr>
         </table>
 
