fix: correct wording for systemd-analyze command descriptions

--- a/naudinga.html
+++ b/naudinga.html
@@ -104,11 +104,11 @@
             </tr>
             <tr>
                 <td>systemd-analyze</td>
-                <td>sShow startup time</td>
+                <td>Shows startup time</td>
             </tr>
             <tr>
                 <td>systemd-analyze critical-chain</td>
-                <td> Show startup time of every proces during startup
+                <td>Shows startup time of every proces during startup
                 </td>
             </tr>
             <tr>
