fix: improve wording for Teltonika routers description

--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -112,7 +112,7 @@
             <tr>
                 <td><a href="https://www.teltonika-networks.com/products/routers" target="_blank">Teltonika routers</a>
                 </td>
-                <td>Proudly made in Lithuania, EU routers by Teltonika</td>
+                <td>Routers, proudly made in Lithuania, EU, by Teltonika</td>
             </tr>
         </table>
 
