Fix: Corrected typo "partyally" to "partially" for F-Droid entry in switching software page.

--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -59,7 +59,7 @@
             </tr>
             <tr>
                 <td>Google Play</td>
-                <td><a href="https://f-droid.org" target="_blank">F-Droid</a> (partyally)</td>
+                <td><a href="https://f-droid.org" target="_blank">F-Droid</a> (partially)</td>
             </tr>
             <tr>
                 <td>Google Maps</td>
