fix: add inxi command for system information in naudinga.html

--- a/naudinga.html
+++ b/naudinga.html
@@ -115,6 +115,11 @@
                 <td>vnstat</td>
                 <td>More at <a href="https://humdi.net/vnstat/" target="_blank">https://humdi.net/vnstat/</a></td>
             </tr>
+            <tr>
+                <td>inxi -Sx</td>
+                <td>Shows useful information about system software like kernel: 6.17.0-14-generic, desktop environment:
+                    Cinnamon v: 6.6.7, distro: Linux Mint 22.3 Zena and base: Ubuntu 24.04 noble etc. </td>
+            </tr>
         </table>
     </section>
     <section id="grass-code">
