fix: add command to display system distribution information in naudinga.html

--- a/naudinga.html
+++ b/naudinga.html
@@ -120,6 +120,10 @@
                 <td>Shows useful information about system software like kernel: 6.17.0-14-generic, desktop environment:
                     Cinnamon v: 6.6.7, distro: Linux Mint 22.3 Zena and base: Ubuntu 24.04 noble etc. </td>
             </tr>
+            <tr>
+                <td>cat /etc/os-release</td>
+                <td>Shows useful information about system name or a distribution </td>
+            </tr>
         </table>
     </section>
     <section id="grass-code">
