--- a/switchingsoftware.html
+++ b/switchingsoftware.html
@@ -82,7 +82,8 @@
             </tr>
             <tr>
                 <td>Microsoft Windows 10</td>
-                <td><a href="https://zorin.com" target="_blank">Linux Zorin OS</a></td>
+                <td><a href="https://zorin.com" target="_blank">Linux Zorin OS</a>;<a href="https://www.linuxmint.com"
+                        target="_blank">Linux Mint OS</a></td>
             </tr>
             <tr>
                 <td>Google Chrome</td>
